--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "unstated": "^2.1.1",
+    "use-global-hook": "^0.1.12"
   },
   "scripts": {
     "start": "react-scripts start",
