--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.10.2",
     "react-redux": "^7.2.0",
     "react-scripts": "1.1.5",
