--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.4.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "bootstrap-select": "^1.13.17",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.10.2",
     "react-redux": "^7.2.0",
     "react-scripts": "1.1.5",
+    "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
