Updated buildspec and cloudformation templates

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 
-env:
-  parameter-store:
+#env:
+#  parameter-store:
 #    CODECOV_TOKEN: CODECOV_TOKEN  # CodeBuild will retrieve this from Systems Manager Parameter Store.
 
 
@@ -19,14 +19,14 @@ phases:
 
   pre_build:
     commands:
-      # Install react-scripts, which will be used to build the react app.
-      - npm i react-scripts
+      # Install all dependencies in package.json.
+      - npm install
 
   build:
     commands:
       # Build the react app.  The `package.json` file shows that `npm build` maps to the `react-scripts build` command,
       # which is why it was installed in the pre-build phase.
-      - npm build
+      - npm run build
 
   post_build:
     commands:
@@ -38,8 +38,8 @@ phases:
       #      - bash codecov.sh -t $CODECOV_TOKEN
 
       # Deploy all CloudFormation templates.
-      - chmod +x ./cdk/cloudformation_deployment.sh
-      - sh ./cdk/cloudformation_deployment.sh
+      - chmod +x ./cicd/deployment/cloudformation_deployment.sh
+      - sh ./cicd/deployment/cloudformation_deployment.sh
 
       # Copy the react app build files to the S3 bucket hosting the website.
       - aws s3 cp ./build s3://querybuilder4j.net --recursive
