Updated codebuild project's role to permission to more resources to deploy to (route53 and s3)

--- a/cicd/cloudformation/0.codebuild_pipeline.cloudformation.yaml
+++ b/cicd/cloudformation/0.codebuild_pipeline.cloudformation.yaml
@@ -51,6 +51,8 @@ Resources:
                   - logs:*
                   - elasticloadbalancing:*
                   - elasticloadbalancingv2:*
+                  - route53:*
+                  - s3:*
                 Effect: Allow
                 Resource: "*"
             Version: '2012-10-17'
