--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,16 +30,16 @@ phases:
 
   post_build:
     commands:
-#      - echo $DOCKERHUB_TOKEN | docker login --username joneschris --password-stdin  # Use password-stdin so that password does not go to shell's logs.
-#      - docker push joneschris/qb4j-mvc:1
+      #      - echo $DOCKERHUB_TOKEN | docker login --username joneschris --password-stdin  # Use password-stdin so that password does not go to shell's logs.
+      #      - docker push joneschris/qb4j-mvc:1
 
-        # Upload code coverage files.
-        #      - curl -s https://codecov.io/bash > codecov.sh
+      # Upload code coverage files.
+      #      - curl -s https://codecov.io/bash > codecov.sh
       #      - bash codecov.sh -t $CODECOV_TOKEN
 
       # Deploy all CloudFormation templates.
-      - chmod +x ./cicd/deployment/cloudformation_deployment.sh
-      - sh ./cicd/deployment/cloudformation_deployment.sh
+      # - chmod +x ./cicd/deployment/cloudformation_deployment.sh
+      # - sh ./cicd/deployment/cloudformation_deployment.sh
 
       # Copy the react app build files to the S3 bucket hosting the website.
       - aws s3 cp ./build s3://querybuilder4j.net --recursive
